Fixed gitlab-ci conf for mirroring

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 stages:
   - mirroring
 
-GitHub MIRROR:
+github_mirroring:
   stage: mirroring
   script:
-    - git push --mirror https://GITHUB_USERNAME:GITHUB_TOKEN@github.com:USI-INF-Software/docker-ci-images.git
+    - git push --mirror https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git
 tags:
   - shared
