--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ stages:
 github_mirroring:
   stage: mirroring
   script:
-    - git push https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git
+    - git push -f https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git
   tags:
     - shared
