--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,7 @@ github_mirroring:
   stage: mirroring
   script:
     - git push --mirror https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git
+  only:
+    - master
   tags:
     - shared
