--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 github_mirroring:
   stage: mirroring
   script:
-    - git push --mirror https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git
+    - git push -f https://$GITHUB_USERNAME:$GITHUB_TOKEN@github.com/USI-INF-Software/docker-ci-images.git HEAD:master
   only:
     - master
   tags:
