Adds scripts to build and push the docker images that have been changed in last commit Updates .gitlab-ci.yml to run scripts in CI. Fixes typo in polymer-ci/Dockerfile.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,22 @@
 stages:
+  - build
+  - push
   - mirroring
+
+build_images:
+  stage: build
+  script:
+    - docker info
+    - ./ci-jobs/build.sh
+  tags:
+    - shared
+
+push_images:
+  stage: push
+  script:
+    - ./ci-jobs/push.sh
+  tags:
+    -shared
 
 github_mirroring:
   stage: mirroring
