[scala-sbt] ssh-agent now runs immediately

--- a/scala-sbt/Dockerfile
+++ b/scala-sbt/Dockerfile
@@ -10,6 +10,7 @@ ENV PATH ${PATH}:${SCALA_HOME}/bin
 
 RUN apk add --no-cache --virtual=.build-dependencies bash wget ca-certificates
 RUN apk add --update bash git openssh-client openssh 
+RUN eval $(ssh-agent -s)
 RUN mkdir -p ${SCALA_HOME} ${SBT_HOME}
 RUN wget -qO - --no-check-certificate "http://scala-lang.org/files/archive/scala-${SCALA_VERSION}.tgz" | tar xz -C $SCALA_HOME --strip-components=1 
 RUN wget -qO - --no-check-certificate https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz  | tar xz -C $SBT_HOME --strip-components=1
