Issue #1: fixing ci conf

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ image: docker:stable-git
 services:
   - docker:dind
 
+before_script:
+  - apk add --update bash  
+
 variables:
   DOCKER_DRIVER: overlay2
 
