Issue #1: scala-sbt prints java version

--- a/scala-sbt/Dockerfile
+++ b/scala-sbt/Dockerfile
@@ -33,6 +33,7 @@ RUN wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
         "http://download.oracle.com/otn-pub/java/jce/${JAVA_VERSION}/jce_policy-${JAVA_VERSION}.zip"
 RUN unzip -jo -d "${JAVA_HOME}/jre/lib/security" "jce_policy-${JAVA_VERSION}.zip"
 RUN rm "${JAVA_HOME}/jre/lib/security/README.txt"
+RUN java -version
 
 # Install Scala & SBT
 RUN mkdir -p ${SCALA_HOME} ${SBT_HOME}
