--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,10 @@
 image: docker:stable-git
 
 services:
-  - docker:dind  
+  - docker:dind
+
+before_script:
+  - apk add --update bash  
 
 variables:
   DOCKER_DRIVER: overlay2
