Issue #1: build and push of images happen in the same job for master branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,14 +18,16 @@ build_images:
   stage: build
   
   script:
-    - docker info
     - ./ci-jobs/build.sh
+  except:
+    - master  
   tags:
     - docker-in-docker
 
 push_images:
   stage: push
   script:
+    - ./ci-jobs/build.sh
     - ./ci-jobs/push.sh
   only:
     - master
@@ -39,4 +41,4 @@ github_mirroring:
   only:
     - master
   tags:
-    - docker-in-docker
+    - docker
