Issue #3: bootstrap scripts handles Gitlab CI bug calling entrypoint twice

--- a/vscode-ci/Dockerfile
+++ b/vscode-ci/Dockerfile
@@ -1,13 +1,11 @@
 FROM node:carbon-jessie
 
-ENV DISPLAY=:1
-
 #####################################################################
 # Install Xvfb and basic dependencies
 #####################################################################
 RUN apt update -y && \
     apt install -y tzdata && \
-    apt install -y apt-transport-https build-essential libasound2 xvfb
+    apt install -y apt-transport-https build-essential libasound2 xvfb x11-utils
 
 #####################################################################
 # Install vscode
@@ -21,6 +19,6 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > mic
 #####################################################################
 # Running Xvfb in bacground
 #####################################################################
-ADD ./bootstrap.sh /bootstrap.sh
+COPY bootstrap.sh /
 RUN chmod a+x /bootstrap.sh
-CMD bash -C '/bootstrap.sh'; 'bash'
+ENTRYPOINT [ "/bootstrap.sh" ]
