Issue #4: added vsce adn yarn to vscode-ci

--- a/vscode-ci/Dockerfile
+++ b/vscode-ci/Dockerfile
@@ -3,9 +3,9 @@ FROM node:carbon-jessie
 #####################################################################
 # Install Xvfb and basic dependencies
 #####################################################################
-RUN apt update -y && \
-    apt install -y tzdata && \
-    apt install -y apt-transport-https build-essential libasound2 xvfb x11-utils
+RUN apt-get update -y && \
+    apt-get install -y tzdata && \
+    apt-get install -y apt-transport-https build-essential libasound2 xvfb x11-utils
 
 #####################################################################
 # Install vscode
@@ -13,8 +13,21 @@ RUN apt update -y && \
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg && \
     install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/ && \
     sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main" > /etc/apt/sources.list.d/vscode.list' && \
-    apt update -y && \
+    apt-get update -y && \
     apt-get install -y code 
+
+#####################################################################
+# Install yarn
+#####################################################################
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+    apt-get update -y && \
+    apt-get install -y yarn 
+
+#####################################################################
+# Install vsce
+#####################################################################
+RUN npm install -g vsce
 
 #####################################################################
 # Running Xvfb in bacground
