Issue #5: Update base image to node 14

--- a/vscode-ci/Dockerfile
+++ b/vscode-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:carbon-jessie
+FROM node:14
 
 #####################################################################
 # Install Xvfb and basic dependencies
