Resolve "Add robotjs dependencies to code-oss image"

--- a/code-oss-ci/Dockerfile
+++ b/code-oss-ci/Dockerfile
@@ -6,7 +6,7 @@ FROM node:12
 RUN apt-get update -y && \
     apt-get install -y tzdata && \
     apt-get install -y g++ gcc make python2.7 libx11-dev libx11-xcb1 libxtst6 libnss3-dev libasound2 libxkbfile-dev && \
-    apt-get install -y libxkbfile-dev pkg-config libsecret-1-dev libxss1 dbus xvfb libgtk-3-0 libgbm1 x11-utils 
+    apt-get install -y libxkbfile-dev pkg-config libsecret-1-dev libxss1 dbus xvfb libgtk-3-0 libgbm1 x11-utils libxtst-dev libpng++-dev
 
 #####################################################################
 # Install yarn
