--- a/nrp77-spacy-ci/Dockerfile
+++ b/nrp77-spacy-ci/Dockerfile
@@ -1,10 +1,6 @@
 FROM continuumio/miniconda3:latest
 
-RUN echo "PRIVATE-TOKEN=${NRP77_NLP_ANALYSIS_REPO_TOKEN}"
-
-RUN wget --header "PRIVATE-TOKEN: ${NRP77_NLP_ANALYSIS_REPO_TOKEN}" \
-    https://gitlab.dev.si.usi.ch/api/v4/projects/297/repository/files/environment.yml/raw \
-    --output-document=environment.yml
+COPY environment.yml environment.yml
 
 RUN conda env create -f environment.yml
 RUN source activate nlp
