--- a/nrp77-spacy-ci/Dockerfile
+++ b/nrp77-spacy-ci/Dockerfile
@@ -2,8 +2,11 @@ FROM continuumio/miniconda3:latest
 
 COPY environment.yml environment.yml
 
+# setup environment
 RUN conda env create -f environment.yml
 RUN source activate nlp
+
+# download models
 RUN python -m spacy download en_core_web_trf
 RUN python -m spacy download fr_dep_news_trf
 RUN python -m spacy download fr_core_news_lg
