--- a/nrp77-spacy-ci/Dockerfile
+++ b/nrp77-spacy-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3:latest
+FROM ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX_FOR_DOCKERFILE}continuumio/miniconda3:latest
 
 # see https://pythonspeed.com/articles/activate-conda-dockerfile/
 # for details about the setup
@@ -18,3 +18,6 @@ RUN python -m spacy download fr_dep_news_trf --timeout=600
 RUN python -m spacy download fr_core_news_lg --timeout=600
 RUN python -m spacy download de_dep_news_trf --timeout=600
 RUN python -m spacy download de_core_news_lg --timeout=600
+
+COPY entrypoint.sh .
+ENTRYPOINT ["./entrypoint.sh"]
